<resources>

    <!-- Facebook App Id -->
    <string name="facebook_application_id" translatable="false">1616332021995948</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbA1616332021995948</string>

    <!-- General text -->
    <string name="app_name">GloverColor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Welcome to GloverColor!</string>
    <string name="glovercolor_tagline">Create \u2022 Save \u2022 Share \u2022 Glove</string>
    <string name="glovercolor">GloverColor</string>

    <!-- Links -->
    <string name="paypal_donate_link"><![CDATA[https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=67QEZRS7X3W2C]]></string>
    <string name="beta_opt_in_link">https://play.google.com/apps/testing/com.achanr.glovercolorapp</string>
    <string name="facebook_page_url">https://www.facebook.com/GloverColor/</string>

    <!-- Titles -->
    <string name="title_your_saved_sets">Saved Sets</string>
    <string name="title_activity_gcwelcome_screen">Home</string>
    <string name="title_edit_set">Edit Set</string>
    <string name="title_add_set">Add Set</string>
    <string name="title_enter_code">Enter Code</string>
    <string name="title_settings">Settings</string>
    <string name="home">Home</string>
    <string name="title_collections">Collections</string>
    <string name="title_edit_collection">Edit Collection</string>
    <string name="title_version_info">Version Release Notes</string>
    <string name="title_sync_conflicts">Sync Conflicts</string>
    <string name="title_discover">Discover</string>
    <string name="title_upload_set">Upload Online</string>

    <!-- Saved Set -->
    <string name="title">Title</string>
    <string name="colors">Colors</string>
    <string name="color_1_subtitle">1st color</string>
    <string name="color_4_subtitle">4th color</string>
    <string name="color_2_subtitle">2nd color</string>
    <string name="color_5_subtitle">5th color</string>
    <string name="color_3_subtitle">3rd color</string>
    <string name="color_6_subtitle">6th color</string>
    <string name="color_7_subtitle">7th color</string>
    <string name="color_8_subtitle">8th color</string>
    <string name="color_9_subtitle">9th color</string>
    <string name="color_10_subtitle">10th color</string>
    <string name="color_11_subtitle">11th color</string>
    <string name="color_12_subtitle">12th color</string>
    <string name="color_13_subtitle">13th color</string>
    <string name="color_14_subtitle">14th color</string>
    <string name="color_15_subtitle">15th color</string>
    <string name="color_16_subtitle">16th color</string>
    <string name="error_invalid_code">Invalid code. Try a different code.</string>
    <string name="error">Error</string>
    <string name="set_added_message">Set added</string>
    <string name="set_deleted_message">Set deleted</string>
    <string name="set_updated_message">Set updated</string>
    <string name="add_new_set">Add New Set</string>
    <string name="add_new_set_dialog">Add new set?</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_changes_dialog">Save your changes?</string>
    <string name="error_title_empty">Title cannot be empty.</string>
    <string name="error_title_length">Title must be less than %1$d characters.</string>
    <string name="error_desc_length">Description must be less than %1$d characters.</string>
    <string name="error_no_color">You must choose at least 1 color.</string>
    <string name="error_title_exists">Title already exists. Choose a different title.</string>
    <string name="revert_changes">Revert Changes</string>
    <string name="revert_changes_dialog">Revert Changes?</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog">Delete this set?</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_dialog">You have unsaved changes. Are you sure you want to leave?</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE AND EXIT</string>
    <string name="reset">RESET</string>
    <string name="exit">EXIT</string>
    <string name="preset_chip_hint">Preset chip (optional)</string>
    <string name="share_code">Share Code</string>
    <string name="changing_preset_chip">Changing Preset Chip</string>
    <string name="changing_preset_chip_desc">Changing the preset chip will reset your current colors and pattern. Do you want to continue?</string>
    <string name="pattern">Pattern</string>
    <string name="check_out_saved_sets">See your saved sets</string>
    <string name="create_a_new_set">Create a new set</string>

    <!-- Collections -->
    <string name="delete_collection">Delete this collection?</string>
    <string name="add_at_least_1_set">You must add at least 1 set.</string>
    <string name="add_collection_title">Add Collection</string>
    <string name="removed_set_from_collection">Removed set from collection</string>
    <string name="collection_updated">Collection updated</string>
    <string name="collection_deleted">Collection deleted</string>
    <string name="collection_added">Collection added</string>
    <string name="choose_sort_option">Choose sort option</string>

    <!-- Enter code -->
    <string name="filter_enter_code">GloverColor</string>
    <string name="prefill_share_code_success">Successfully prefilled shared code</string>
    <string name="prefill_share_code_failure">Failed to prefill shared code</string>
    <string name="enter_code_description">Enter or paste the shared codes\nyou receive from friends here:</string>
    <string name="enter_code_hint">Shared code</string>
    <string name="submit">Submit</string>

    <!-- Account login and syncing -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="currently_not_logged_in">Currently Not Logged In</string>
    <string name="sync_conflict_message">There were conflicts when syncing your sets online. Please select all sets you would like to keep.</string>
    <string name="facebook_share_description">Enter this code on the GloverColor mobile app or click this link from your mobile phone!</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="confirm_selection_body">You have selected %1$d sets. Any unselected sets will be deleted forever. Are you sure you would like to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="sync_conflicts">Sync Conflicts</string>
    <string name="resolving_conflicts_message">Resolving conflicts...Please Wait...</string>
    <string name="please_login_first">Please login first to save data online</string>
    <string name="data_already_synced">Data is already synced</string>
    <string name="something_went_wrong">Something went wrong Try again later</string>
    <string name="data_synced_complete_message">Data has been synced to your account</string>
    <string name="online_sync">Online Sync</string>
    <string name="syncing_wait_message">Syncing...Please Wait...</string>
    <string name="checking_sync_status_message">Checking Sync Status...Please Wait...</string>
    <string name="title_nav_account">Account</string>
    <string name="nav_synchronize">Synchronize</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="sync_status">Sync Status:</string>
    <string name="sync_status_unavailable">Unavailable</string>
    <string name="sync_status_out_of_sync">Out of Sync</string>
    <string name="sync_status_synced">Synced</string>
    <string name="sync_cancelled">Sync cancelled</string>
    <string name="login_showcase">Login and synchronize your saved sets to an online database.</string>
    <string name="new_showcase">NEW!</string>
    <string name="check_your_status_showcase">Check your sync status from time to time. You can re-synchronize easily by pressing the \'Synchronize\' button in the navigation menu.</string>
    <string name="error_syncing">Something went wrong while syncing. Please try again later.</string>

    <!-- Discover Feature -->
    <string name="choose_sets_to_upload">Choose which sets you would like to upload and share online. Sets you upload now will replace any previously uploaded sets.</string>
    <string name="select_one_set">You must select at least 1 set to upload.</string>
    <string name="you_selected_to_upload">You have selected %1$d sets. Are you sure you would like to continue?</string>
    <string name="you_selected_too_many">You have selected %1$d sets. You may only upload a max of %2$d sets. Please choose again.</string>
    <string name="upload">Upload</string>
    <string name="uploading_sets_please_wait">Uploading sets...Please Wait...</string>
    <string name="discover">Discover</string>
</resources>
