<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_nav_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_saved_color_sets"
            android:icon="@drawable/ic_list_black"
            android:title="@string/title_your_saved_sets"/>
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_folder_black_48dp"
            android:title="@string/title_collections"/>
        <item
            android:id="@+id/nav_enter_code"
            android:icon="@drawable/ic_input_black"
            android:title="@string/title_enter_code"/>
    </group>

    <item android:title="@string/title_nav_account">
        <menu>
            <group
                android:id="@+id/group_nav_account"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_sync"
                    android:icon="@drawable/ic_sync_black_48dp"
                    android:title="@string/nav_synchronize"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_discover"
                    android:icon="@drawable/ic_public_black_48dp"
                    android:title="Discover"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_login_logout"
                    android:icon="@drawable/ic_account_box_black_48dp"
                    android:title="@string/login"
                    android:actionViewClass="android.widget.ImageButton"/>
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/group_nav_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/title_settings"/>
    </group>

</menu>
