<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.GCBaseActivity"
    tools:showIn="@layout/activity_home"
    android:background="?attr/background">

    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:src="@drawable/glover_color_logo"/>

    <TextView
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"/>

    <TextView
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glovercolor_tagline"/>

    <Button
        android:id="@+id/create_new_set_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_a_new_set"
        android:textColor="@android:color/primary_text_dark"/>

    <Button
        android:id="@+id/checkout_saved_set_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/check_out_saved_sets"
        android:textColor="@android:color/primary_text_dark"/>
</LinearLayout>
