<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/nav_header_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"
              android:background="?attr/colorPrimary"
              android:gravity="bottom"
              android:orientation="vertical"
              android:paddingBottom="8dp"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/glover_color_logo"/>

        <TextView
            android:id="@+id/please_login_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/currently_not_logged_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/account_information_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logged_in_as"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/current_user_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="N/A"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/navigation_header_sync_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/sync_status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="N/A"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_header_tag_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/glovercolor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glovercolor_tagline"/>

    </LinearLayout>

</LinearLayout>
