<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/title_hint"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="22sp"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/colors"/>

        <LinearLayout
            android:id="@+id/color_swatch_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="8">

            <RelativeLayout
                android:id="@+id/color_swatch_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_1_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color_swatch_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_2_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color_swatch_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_3_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color_swatch_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_4_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color_swatch_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_5_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color_swatch_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_6_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color_swatch_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_7_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color_swatch_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/color_swatch_8_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="H"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:alpha="0.5"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/color_1_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_1_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_1"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/color_5_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_5_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_5"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/color_2_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_2_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_2"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/color_6_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_6_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_6"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/color_3_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_3_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_3"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/color_7_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_7_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_7"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/color_4_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_4_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_4"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/color_8_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditSavedSetColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_8_subtitle"/>

                <Spinner
                    android:id="@+id/spinner_color_8"
                    style="@style/EditSavedSetColorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/mode"/>

        <LinearLayout
            android:id="@+id/mode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/EditSavedSetColorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_subtitle"/>

            <Spinner
                android:id="@+id/edit_text_mode"
                style="@style/EditSavedSetColorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>